2006-01-03  Alexey Proskuryakov  <ap@nypop.com>

        Reviewed by Eric.

        - fix http://bugzilla.opendarwin.org/show_bug.cgi?id=5609
          XSLT document() doesn't handle relative paths

        Test case: fast/xsl/xslt-relative-path.xml

        * khtml/xsl/xslt_processorimpl.cpp:
        (DOM::docLoaderFunc): Renamed from stylesheetLoadFunc. Use base URL when constructing URLs.
        (DOM::XSLTProcessorImpl::transformToString):

2006-01-02  Vicki Murley  <vicki@apple.com>

        Reviewed by Maciej.
 
	- fix for <rdar://problem/4389622> *Pan EU2* iframe swallows events for overlapping elements (part 2)

	We originally added a call to passSubframeEventToSubframe here to fix the hand cursor updating problem
	reported in <rdar://problem/4316201> REGRESSION: cursor and text in status bar is not updated when 
	mousing over links in a frame (5509). However, when we return early after passSubframeEventToSubframe,
	we fail to fire onmouseout events.  Since the call to passSubframeEventToSubframe was originally added
	to fix the hand cursor updating problem, remove the early return and make cursor updating conditional
	on passSubframeEventToSubframe.

        * khtml/khtmlview.cpp:
        (KHTMLView::viewportMouseMoveEvent):

2005-12-30  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - http://bugzilla.opendarwin.org/show_bug.cgi?id=4557
          rename unusual strcmp and strcasecmp for DOMString family

        Added new functions named equal and equalIgnoringCase.

        * khtml/xml/dom_stringimpl.h: Changed the type of the length parameter to computeHash to unsigned
        to match the rest of the interface. Added equal and equalIgnoringCase functions. Added a
        version of the hash function that works on char* to CaseInsensitiveHash as preparation for an
        atomic string change.
        * khtml/xml/dom_stringimpl.cpp: Moved the QT_ALLOC_QCHAR_VEC and QT_DELETE_QCHAR_VEC macros